--- a/PAGINAWEB/css/styles.css
+++ b/PAGINAWEB/css/styles.css
@@ -5,7 +5,7 @@ body {
   background-image: linear-gradient(
     160deg,
     #2d2d2d 0%,
-    #a59090 50%,
+    #68ABD6 50%,
     #ede8e8 100%
   );
   background-repeat: no-repeat;
@@ -95,10 +95,10 @@ p li {
 }
 
 #principal {
-  background-color: #a0b69e;
+  background-color: #65B8F7;
 }
 #circle {
-  background-color: #a0b69e;
+  background-color: #65B8F7;
   transition: all 0.3s ease;
 }
 #circle:hover {
@@ -114,15 +114,19 @@ p li {
   width: 0;
 }
 .finalHTML {
+  background-color: #5C81B6;
   width: 80%;
 }
 .finalCSS {
+  background-color: #5C81B6;
   width: 70%;
 }
 .finalJS {
+  background-color: #5C81B6;
   width: 40%;
 }
 .finalNET {
+  background-color: #5C81B6;
   width: 60%;
 }
 
